# vknn

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  SUMMARY.md  WORKLOG.md  build.sh
assets/: golden_top5.txt  squeezenet_fp16.mnn
assets/layers/: 317.npy  320.npy  328.npy  333.npy  336.npy  339.npy  342.npy  345.npy  350.npy  353.npy  356.npy  359.npy  362.npy  365.npy  368.npy  371.npy  376.npy  379.npy  382.npy  385.npy  388.npy  391.npy  394.npy  397.npy  400.npy  403.npy  406.npy  411.npy  414.npy  417.npy  420.npy  423.npy  426.npy  429.npy  432.npy  437.npy  440.npy  443.npy  446.npy  449.npy  (+59 more)
benchmark/: README.md  USAGE.md  benchmark.cpp  benchmark.py  example.json  fetch_model.py  hf_README.md  make_golden.py  run.py  upload_model.py  validate.cpp  yonosplat.json  yonosplat_dgs.json  yonosplat_dgs_fp32.json  yonosplat_dgs_fp32compute.json
benchmark/configs/: example.json  yonosplat.json  yonosplat_dgs.json  yonosplat_dgs_fp32.json  yonosplat_dgs_fp32compute.json  yonosplat_dl3dv.json
benchmark/models/: config.json  intrinsics.npy  opacities_gold.npy
benchmark/scripts/: fetch_model.py  make_golden.py  upload_model.py
build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  vx_op_check  vx_probe
convert/: compile.cpp
docs/: ADDING_AN_OPERATOR.md  ADDING_A_BACKEND.md  ARCHITECTURE.md  BENCHMARK.md  CONFIG.md  DEVICE_REPORT.md  Doxyfile  LIMITATIONS.md  MNN_ANALYSIS.md  OPTIMIZATION_PLAN.json  OP_COVERAGE.md
docs/adr/: 0001-language-build-system.md  0002-vulkan-loader-and-shader-packaging.md  0003-uma-memory-strategy.md  0004-internal-compute-layout.md  0005-ion-via-dma-buf-heap.md  0006-segment-execution-and-fallback.md  0007-enn-backend-stub.md  0008-caches-and-autotuning.md
docs/superpowers/plans/: 2026-07-01-fuse-pointwise-chains.md  baseline-profile.md  results-fuse-pointwise.md
docs/superpowers/specs/: 2026-07-01-fuse-pointwise-chains-design.md
examples/: backend_switch.cpp  classify.cpp  compile.cpp  convert.cpp  image_bench.cpp  ion_zerocopy.cpp  op_check.cpp  predict.cpp  predict_cache.cpp  probe.cpp  profile.cpp  raster.cpp  run_io.cpp  validate.cpp  yonosplat.cpp  zerocopy_cache.cpp  zerocopy_simple.cpp
include/vknn/: act_type.h  attr.h  attributes.h  backend.h  backend_class.h  backend_kind.h  backend_registry.h  binary_type.h  cache_mode.h  common.h  config.h  config_struct.h  device_storage.h  dtype.h  error.h  exec_context.h  find_tensor.h  graph.h  hint.h  host_buffer.h  io_info.h  io_tensor.h  ion.h  log.h  log_level.h  log_stream.h  logging.h  model.h  model_class.h  nchw.h  node.h  op.h  op_record.h  op_type.h  precision.h  profiler.h  profiler_class.h  reduce_type.h  rt_tensor.h  runtime.h  (+13 more)
include/vx/: backend.h  common.h  config.h  dtype.h  graph.h  ion.h  logging.h  model.h  op.h  profiler.h  session.h  tensor.h  tensor_format.h
samples/: squeezenet_fp16.vxm
scripts/: bench.sh  bench_vs_mnn.sh  build_android.sh  export_tv.py  format.sh  gen_docs.sh  gen_site.py  get_golden.py  make_validate.py  run_on_device.sh
scripts/yonosplat/: README.md  export_encoder.py  fetch_re10k_test.py  fix_and_validate.py  gen_golden.py  op_test.py  op_validate.py  ref_rasterizer.py  run_demo.sh
shaders/: add.comp  add_fp16.comp  avgpool.comp  avgpool2d.comp  avgpool2d_fp16.comp  avgpool_fp16.comp  batchnorm.comp  batchnorm_fp16.comp  binary.comp  binary_fp16.comp  boundary_convert.comp  cast.comp  clip.comp  clip_fp16.comp  common.glsl  concat.comp  concat_fp16.comp  constant_of_shape.comp  constant_of_shape_fp16.comp  conv.comp  conv1x1.comp  conv1x1_fp16.comp  conv1x1_img.comp  conv1x1_reduce_fp16.comp  conv1x1_s2.comp  conv1x1_s2_fp16.comp  conv1x1_splitk_fp16.comp  conv1x1_tex.comp  conv3x3_lds_fp16.comp  conv_fp16.comp  conv_reg.comp  conv_reg_fp16.comp  convert_layout.comp  convert_layout_fp16.comp  convtranspose.comp  dwconv.comp  dwconv_fp16.comp  einsum_outer.comp  einsum_outer_fp16.comp  equal.comp  (+79 more)
skills/: README.md  add-a-backend.md  add-an-operator.md  benchmark-a-model.md  compile-and-run-a-model.md  run-yonosplat.md
src/backend/cpu/: cpu_backend.cpp  cpu_backend.h
src/backend/cpu/ops/: add.cpp  avgpool.cpp  batchnorm.cpp  binary.cpp  cast.cpp  clip.cpp  concat.cpp  constant.cpp  constant_of_shape.cpp  conv.cpp  convert_dtype.cpp  convtranspose.cpp  depth_to_space.cpp  einsum.cpp  equal.cpp  expand.cpp  eyelike.cpp  flatten.cpp  fused_dwpw.cpp  fused_pointwise.cpp  fused_se.cpp  gather.cpp  gemm.cpp  global_avg_pool.cpp  greater.cpp  greaterequal.cpp  gridsample.cpp  identity.cpp  layernorm.cpp  matmul.cpp  maxpool.cpp  pad.cpp  prelu.cpp  reduce.cpp  (+14 more)
src/backend/vulkan/: vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_buffer.h  vk_command.cpp  vk_command.h  vk_common.h  vk_context.cpp  vk_context.h  vk_image.cpp  vk_image.h  vk_pipeline.cpp  vk_pipeline.h
src/backends/cpu/: cpu_backend.cpp  cpu_backend.h  ops_basic.cpp  ops_conv.cpp  ops_shape.cpp
src/backends/enn/: enn_backend.cpp
src/backends/vulkan/: vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_buffer.h  vk_command.cpp  vk_command.h  vk_common.h  vk_context.cpp  vk_context.h  vk_image.cpp  vk_image.h  vk_ops.cpp  vk_pipeline.cpp  vk_pipeline.h
src/core/: backend_registry.cpp  config.cpp  conv_geom.h  graph.cpp  ion.cpp  json.h  logging.cpp  model.cpp  model_io.cpp  op.cpp  profiler.cpp  session.cpp
src/import/: const_fold.cpp  eliminate_dead_nodes.cpp  eliminate_float_cast.cpp  eliminate_identity.cpp  fold_batchnorm.cpp  fuse_activations.cpp  fuse_dwpw.cpp  fuse_matmul_bias.cpp  fuse_pointwise_chains.cpp  fuse_residual_add.cpp  fuse_squeeze_excite.cpp  fuse_swish.cpp  infer_shapes.cpp  insert_layout_converts.cpp  lower_einsum.cpp  mark_fp32.cpp  passes.cpp  passes.h  passes_internal.h  passes_util.cpp  run_standard_passes.cpp
src/import/onnx/: onnx_graph_builder.h  onnx_node_parser.h  onnx_parser.cpp  onnx_reader.h  onnx_tensor_parser.h  onnx_types.h
tests/: test_core.cpp  test_integration.cpp  test_ops.cpp
tools/: compare_layers.py  embed_spirv.py  onnx_dump.py  scan_unsupported_ops.py
(+129 files in other folders)
